kf-setup-notebook/minio-istio-connectivity/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio
  namespace: admin
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /minio/
    rewrite:
      uri: /minio/
    route:
    - destination:
        host: minio.admin.svc.cluster.local
        port:
          number: 9000
    timeout: 300s
